tests/reject/where_defaultable_bad.ty
# `where defaultable(T)` instantiated with a non-defaultable type (a struct has no
# scalar zero). Both compilers must refuse at instantiation.

struct P:
    x: int

fn total(xs: [$T]) -> T where defaultable(T):
    return zero$(T)

fn main():
    println(str(total([P(1), P(2)]).x))
